Quick fix on sidebar spacing

--- a/src/styles.css
+++ b/src/styles.css
@@ -83,7 +83,7 @@ body {
 .info-card, 
 .compare-steps, 
 .friends {
-    margin: auto;
+    margin: 18px;
     width: 80%;
 }
 
